cabal-version:      2.4
name:               game
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Edvin Källström
maintainer:         edvin.kallstrom@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Data, Assets

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    random, base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
